# 4SureERP_base

./: .gitignore  4sureERP_base:views:static:css:style.css  CONTRIBUTING.md  MANIFEST.in  SECURITY.md  __manifest__.py  cli.py   nohup.out  server.py  server_login.py  setup.cfg
base_api/: .env.example  __init__.py  alembic.ini  app.py  config.py  db.py  main.py  models.py  requirements.txt  routes_auth.py  routes_base.py  routes_registry.py  schemas.py  security.py  seed.py  seed_owner.py
base_api/alembic/: env.py
base_api/alembic/versions/: b279df974998_bootstrap_base_schema.py
base_api/api/: routes_auth.py  routes_base.py  routes_embed.py  routes_registry.py
base_api/domain/: registry.py
base_api/registry/: dashboards.json
base_api/services/: embed_tokens.py
controllers/: __init__.py  main.py
models/: __init__.py
registry/: dashboards.json  modules_ports.json
scripts/: sync_nginx_modules.py
security/: auth_middleware.py  permissions.py  roles.json
static/css/: dashboard.css  mini_viewer.css  style.css
static/js/: dashboard.js  menu-links.js  mini_viewer.js  viewport.js
static/mock/: accounting.html  employees.html  index.html  sales.html
static/src/css/: style.scss
views/: __init__.py
views/static/css/: dashboard.css  loading.css  mascot-animations.css  style.css
views/templates/: 4sureERP_base:views:templates:dashboard.html  4sureERP_base:views:templates:login.html  dashboard.html  dashboard.html.bak.1754945789  dashboard.html.bak.1754946448  dashboard.html.bak.2025-08-11-200741  index.html  landing.html  login.html  owner_shell.html
(+3 files in other folders)
