[metadata]
name = 4sureerp
version = 1.0.0
description = 4SureERP: All-in-One Business Operating System
long_description = file: README.md
long_description_content_type = text/markdown
author = 4SureERP Development Team
author_email = dev@4sureerp.com
url = https://4sureerp.com
license = LGPL-3
license_files = LICENSE

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    Babel>=2.10
    Werkzeug>=2.2
    psycopg2>=2.9
    lxml>=4.9
    pytz
    requests>=2.31
    cryptography>=42.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    4sureerp-bin = foursureerp.cli:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = docs,build,dist
